--- a/wsgi/templates/index.html
+++ b/wsgi/templates/index.html
@@ -2,4 +2,4 @@
 <title>Fitness Assessment</title>
 <h2>Fitness Assessment</h2>
 
-<p><a href="/oneAndHalfMileRunWalk">1.5 mile run/walk</a><p>
+<p><a href="/OneAndHalfMileRunWalk">1.5 mile run/walk</a><p>
