--- a/wsgi/templates/profile.html
+++ b/wsgi/templates/profile.html
@@ -28,6 +28,8 @@
 		</table>
 		<input type="submit" value="Save" onclick="saveEntry();">
 		</form>
+		
+		<p><a href="ClearUserData">Clear all user data</a>
 		</div>
   {% endif %}
 {% endblock %}
